--- a/midonet-repository/config.yaml
+++ b/midonet-repository/config.yaml
@@ -13,11 +13,11 @@ options:
     description: "Branch on Repository"
   username:
     type: string
-    default: "calsoft" 
+    default: "XXXXX" 
     description: "username for midonet repository"
   password:
     type: string
-    default: "HJu7S6DFq" 
+    default: "XXXXXXX" 
     description: "password for the midonet repository"
   midonet_flavor:
     type: string
