--- a/midonet-zookeeper/README.example
+++ b/midonet-zookeeper/README.example
@@ -1,41 +1,38 @@
+#
+# Copyright (c) 2015 Midokura SARL, All Rights Reserved.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#    http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 # Overview
 
-Describe the intended usage of this charm and anything unique about how this charm relates to others here.
+Overview
+========
 
-This README will be displayed in the Charm Store, it should be either Markdown or RST. Ideal READMEs include instructions on how to use the charm, expected usage, and charm features that your audience might be interested in. For an example of a well written README check out Hadoop: http://jujucharms.com/charms/precise/hadoop
+This charm provides zookeeper along with open jdk7 if its not installed
+Before deploying the midonet-cassandra make sure you already deployed
+midonet-repository juju charm in order to all the neccessary repositories
+for ubuntu.
 
-Use this as a Markdown reference if you need help with the formatting of this README: http://askubuntu.com/editing-help
+Provides the zookeeper-relation-joined hook to set the ip's zookeeper server
+for dependency charms.
 
-This charm provides [service](http://example.com). Add a description here of what the service itself actually does.
+Usage
+=====
+    juju deploy midonet-zookeeper
+   
 
-Also remember to check the [icon guidelines](https://juju.ubuntu.com/docs/authors-charm-icon.html) so that your charm looks good in the Juju GUI.
-
-# Usage
-
-Step by step instructions on using the charm:
-
-    juju deploy servicename
-
-and so on. If you're providing a web service or something that the end user needs to go to, tell them here, especially if you're deploying a service that might listen to a non-default port.
-
-You can then browse to http://ip-address to configure the service.
-
-
-If the charm has any recommendations for running at scale, outline them in examples here. For example if you have a memcached relation that improves performance, mention it here.
-
-
-This not only helps users but gives people a place to start if they want to help you add features to your charm.
-
-# Configuration
-
-The configuration options will be listed on the charm store, however If you're making assumptions or opinionated decisions in the charm (like setting a default administrator password), you should detail that here so the user knows how to change it immediately, etc.
-
-# Contact Information
-
-Though this will be listed in the charm store itself don't assume a user will know that, so include that information here:
-
-
-- Upstream website
-- Upstream bug tracker
-- Upstream mailing list or contact information
-- Feel free to add things if it's useful for users
+Note:
+=====
+    if you didnt deploy midonet-repositoy please run the below
+    juju deploy midonet-repository
+ 
