--- a/midonet-agent/metadata.yaml
+++ b/midonet-agent/metadata.yaml
@@ -1,19 +1,32 @@
+#
+# Copyright (c) 2015 Midokura SARL, All Rights Reserved.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#    http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 name: midonet-agent
-summary: <Fill in summary here>
-maintainer: sandy <sandy@juju1>
+summary: juju charm for midonet-agent
+maintainer: Midokura
 description: |
-  <Multi-line description here>
+  This charm will install the midonet-agent and used to controll the traffic in midocloud.
+  It requires the zookeeper and cassandra server ip's.
 tags:
-  # Replace "misc" with one or more whitelisted tags from this list:
-  # https://juju.ubuntu.com/docs/authors-charm-metadata.html#charm-metadata
-  - misc
+  - midonet
 subordinate: false
 provides:
-  provides-relation:
-    interface: interface-name
+  midonet-agent:
+    interface: midonet
 requires:
-  requires-relation:
-    interface: interface-name
-peers:
-  peer-relation:
-    interface: interface-name
+  zookeeper:
+    interface: zookeeper-server
+  cassandra:
+    interface: cassandra-server
