--- a/midonet-manager/config.yaml
+++ b/midonet-manager/config.yaml
@@ -1,3 +1,18 @@
+#
+# Copyright (c) 2015 Midokura SARL, All Rights Reserved.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#    http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 options:
   debug:
     type: string
@@ -7,11 +22,7 @@ options:
     type: string
     default: "https://github.com/midonet/orizuru.git"
     description: "Repository for zoo-keeper"
-  midonet_repo:
-    type: string
-    default: "MEM" 
-    description: "Repository for midonet"
-  midonet_puppet_modules_branch:
+ midonet_puppet_modules_branch:
     type: string
     default: "master" 
     description: "Branch on Repository"
@@ -23,7 +34,3 @@ options:
     type: string
     default: "127.0.0.1" 
     description: "Midonet API IP"
-  midonet_mem_version:
-    type: string
-    default: "1.8"
-    description: "Medonet repo MEM version"
