metadata.yaml  changes for midonet-api and zookeeper relations

--- a/midonet-api/metadata.yaml
+++ b/midonet-api/metadata.yaml
@@ -28,6 +28,6 @@ provides:
   midonet-api:
     interface: midonet
 requires:
-  zookeeper:
-    interface: zookeeper-server
+  zks_ips:
+    interface: midonet-api
 
