--- a/neutron-api/config.yaml
+++ b/neutron-api/config.yaml
@@ -56,7 +56,7 @@ options:
       .
         ovs - OpenvSwitch Plugin
         nsx - VMWare NSX
-        midonet - Midonet-agent Plugin
+        midonet - Midokura MidoNet
       .
   overlay-network-type:
     default: gre
