--- a/midonet-agent/metadata.yaml
+++ b/midonet-agent/metadata.yaml
@@ -15,18 +15,23 @@
 #
 name: midonet-agent
 summary: juju charm for midonet-agent
-maintainer: Midokura
+maintainer: Midokura SarL
 description: |
-  This charm will install the midonet-agent and used to controll the traffic in midocloud.
-  It requires the zookeeper and cassandra server ip's.
+  This charm will install the midonet java agent.
+  All installed agents work as the distributed flow simulator.
+  Each agent requires access to the zookeeper and cassandra servers.
+  Topology information and host NIC bindings are stored in zookeeper.
+  Cassandra can be used as a secondary storage for L4 and NAT state.
 tags:
   - midonet
-subordinate: false
+subordinate: true
 provides:
   midonet-agent:
-    interface: midonet
+    interface: midonet-agent
 requires:
-  zookeeper:
-    interface: zookeeper-server
-  cassandra:
-    interface: cassandra-server
+  midonet-repository:
+    interface: midonet-repository
+  midonet-zookeeper:
+    interface: midonet-zookeeper
+  midonet-cassandra:
+    interface: midonet-cassandra
