changes to midonet-manager charm for midonet with openstack integration

--- a/midonet-manager/metadata.yaml
+++ b/midonet-manager/metadata.yaml
@@ -14,8 +14,9 @@
 # limitations under the License.
 #
 name: midonet-manager
-summary: juju charm for midonet-manager
-maintainer: Midokura
+subordinate: false
+summary: charm for deploying midonet-manager
+maintainer: Midokura SarL 
 description: |
   MidoNet Manager provides a single pane of glass view of all the bridges,
   routers, tenants, tunnel zones being managed by MidoNet and the agents.
@@ -23,8 +24,14 @@ description: |
   routing tables can be done easily with the intuitive user interface
 tags:
   - midonet
-subordinate: false
 provides:
   midonet-manager:
-    interface: midonet
-
+    interface: midonet-manager
+    scope: container
+requires:
+  midonet-repository:
+    interface: midonet-repository
+    scope: container
+  container:
+    interface: juju-info
+    scope: container
