--- a/midonet-repository/metadata.yaml
+++ b/midonet-repository/metadata.yaml
@@ -1,13 +1,34 @@
+#
+# Copyright (c) 2015 Midokura SARL, All Rights Reserved.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 name: midonet-repository
-summary: charm for midonet repositories on ubuntu
-maintainer: midokura
+subordinate: true
+summary: charm for setting up midonet repositories on ubuntu
+maintainer: Midokura SarL
 description: |
-   This charm will configure the basic pre-requites to download the midonet packages
-   for ubuntu. sets the repositories aprropriately and install the puppet as pre-install software
+  This charm will configure the repositories for OSS or MEM versions of MidoNet.
 tags:
   - midonet
-subordinate: false
 provides:
-  mido-repo:
+  neutron-plugin:
+    interface: neutron-plugin
+    scope: container
+  midonet-repository:
     interface: midonet-repository
-
+    scope: container
+requires:
+  container:
+    interface: juju-info
+    scope: container  
